Added preferences resource and other simplified way to access data store

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 <!--    Labels-->
     <string name="label_billing">Billing</string>
     <string name="label_dashboard">Dashboard</string>
+    <string name="label_welcome">Welcome</string>
     <string name="label_mill">Mill</string>
     <string name="label_tractor">Tractor</string>
     <string name="label_harvester">Harvester</string>
