--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="label_select_account">Select Account</string>
     <string name="label_customer_alias">Customer Alias</string>
     <string name="label_add_customer">Add Customer</string>
+    <string name="label_employees">Employees</string>
 
 <!--    Sentences-->
     <string name="sentence_amount_to_pay">Amount to pay</string>
